--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dist: bionic
 
 install:
   - sudo apt update
-  - apt install apt-transport-https ca-certificates curl git software-properties-common
+  - sudo apt install apt-transport-https ca-certificates curl git software-properties-common
 
 script:
   - install-root.sh
