--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ script:
 
 after_script:
   - echo "[INFO] The resulting log:" && cat /tmp/boo.log
-  - echo "[INFO] Github user:" && bash -Hu denis ssh git@github.com
+  - echo "[INFO] Github user:" && sudo -Hu denis ssh git@github.com
