--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - sudo apt install apt-transport-https ca-certificates curl git software-properties-common
 
 script:
-  - cd /tmp && ./install-root.sh >>/tmp/boo.log
+  - ./install-root.sh >>/tmp/boo.log
 
 after_script:
   - echo "[INFO] The resulting log:" && cat /tmp/boo.log
