--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - sudo apt install apt-transport-https ca-certificates curl git software-properties-common
 
 script:
+  - ./create-user denis "$(cat .ssh/id_rsa.pub)" >>/tmp/boo.log
   - ./install-root.sh >>/tmp/boo.log
 
 after_script:
